--- a/package.json
+++ b/package.json
@@ -1,11 +1,16 @@
 {
   "name": "bot-engine-telegram",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "description": "A modern, modular TypeScript framework for building Telegram bots with Telegraf",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
+  "bin": {
+    "create-bot-engine": "./dist/cli/index.js",
+    "bot-engine": "./dist/cli/index.js"
+  },
   "scripts": {
     "build": "tsc",
+    "build:cli": "tsc && chmod +x dist/cli/index.js",
     "dev": "ts-node examples/basic-bot.ts",
     "start": "node dist/examples/basic-bot.js",
     "watch": "tsc --watch",
@@ -13,7 +18,7 @@
     "test": "echo 'Tests configured - run: npx jest' && exit 0",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
-    "prepublishOnly": "npm run clean && npm run build",
+    "prepublishOnly": "npm run clean && npm run build:cli",
     "lint": "eslint src --ext .ts",
     "format": "prettier --write \"src/**/*.ts\" \"examples/**/*.ts\""
   },
@@ -55,13 +60,21 @@
     "telegraf": "^4.15.0"
   },
   "dependencies": {
-    "telegraf": "^4.15.0"
+    "telegraf": "^4.15.0",
+    "express": "^4.18.2",
+    "commander": "^11.1.0",
+    "@inquirer/prompts": "^3.3.0",
+    "chalk": "^4.1.2",
+    "fs-extra": "^11.2.0"
   },
   "devDependencies": {
     "@jest/core": "^30.2.0",
     "@jest/test-sequencer": "^30.2.0",
     "@types/jest": "^29.5.14",
     "@types/node": "^20.19.25",
+    "@types/express": "^4.17.21",
+    "@types/fs-extra": "^11.0.4",
+    "@types/supertest": "^2.0.16",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
     "dotenv": "^16.3.1",
@@ -70,6 +83,7 @@
     "jest": "^29.7.0",
     "nodemon": "^3.0.2",
     "prettier": "^3.6.2",
+    "supertest": "^6.3.4",
     "ts-jest": "^29.4.5",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.3"
